[gd_scene load_steps=9 format=2]

[ext_resource path="res://interface/settings-menu/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/character-select/background.png" type="Texture" id=2]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=3]
[ext_resource path="res://interface/back-arrow.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/back-arrow.gd" type="Script" id=5]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/b.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=4]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Control2" type="Control"]
script = ExtResource( 1 )

[node name="background" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="black-board" type="TextureRect" parent="background"]
margin_left = -41.0
margin_top = -1.0
margin_right = 1879.0
margin_bottom = 1079.0
rect_scale = Vector2( 0.56, 0.56 )
texture = ExtResource( 2 )

[node name="title" type="Label" parent="."]
margin_top = 3.0
margin_right = 1019.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Settings"
align = 1

[node name="Settings" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 76.0
margin_right = 858.0
margin_bottom = 476.0

[node name="leftPane" type="VBoxContainer" parent="Settings"]
margin_right = 150.0
margin_bottom = 500.0
rect_min_size = Vector2( 150, 0 )

[node name="Button" type="Button" parent="Settings/leftPane"]
margin_right = 150.0
margin_bottom = 20.0
text = "Restore Defaults"

[node name="middlePane" type="VBoxContainer" parent="Settings"]
margin_left = 154.0
margin_right = 854.0
margin_bottom = 500.0

[node name="scrollContainer" type="ScrollContainer" parent="Settings/middlePane"]
margin_right = 700.0
margin_bottom = 500.0
rect_min_size = Vector2( 700, 500 )

[node name="settings" type="VBoxContainer" parent="Settings/middlePane/scrollContainer"]

[node name="Control" type="Control" parent="Settings"]
margin_left = 858.0
margin_right = 858.0
margin_bottom = 500.0

[node name="back-arrow" type="Control" parent="Settings/Control" instance=ExtResource( 4 )]
margin_left = -873.203
margin_top = 452.265
margin_right = -728.203
margin_bottom = 580.265
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 30, 20 )
script = ExtResource( 5 )

[node name="back" type="Control" parent="Settings/Control"]
margin_left = -4.0
margin_top = -33.0
margin_right = -4.0
margin_bottom = 931.0

[node name="backLabel" type="Label" parent="Settings/Control/back"]
margin_left = -787.939
margin_top = 517.215
margin_right = -515.939
margin_bottom = 548.215
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Back"

[node name="BTexture" type="TextureRect" parent="Settings/Control/back"]
margin_left = -839.256
margin_top = 506.431
margin_right = -799.256
margin_bottom = 546.431
rect_scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 6 )
